--- a/app/src/main/res/drawable/image_border.xml
+++ b/app/src/main/res/drawable/image_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="@dimen/margin_large" />
+    <corners android:radius="0dp" />
     <padding
         android:bottom="@dimen/padding_border"
         android:left="@dimen/padding_border"
